--- a/app/elements/challenge/challenge-card.html
+++ b/app/elements/challenge/challenge-card.html
@@ -61,7 +61,7 @@
 				}
 			},
 			computeDuration: function (challenge) {
-				return computeDuration(challenge.Duration);
+				return util.computeDuration(challenge.Duration);
 			}
 		});
 	</script>
