--- a/app/elements/submission/tasks/simple-code/simple-code-task.html
+++ b/app/elements/submission/tasks/simple-code/simple-code-task.html
@@ -39,7 +39,7 @@
 				this.$.console.setOutput(r.detail.response);
 			},
 			onError: function(error){
-				handleError(error);
+				util.error(error);
 			}
 		});
 	</script>
