--- a/app/elements/submission/tasks/javaut/javaut-task.html
+++ b/app/elements/submission/tasks/javaut/javaut-task.html
@@ -48,7 +48,7 @@
 				this.$.console.setOutput(r.detail.response);
 			},
 			onError: function(error){
-				handleError(error);
+				util.error(error);
 			}
 		});
 	</script>
