--- a/app/elements/task/task-list.html
+++ b/app/elements/task/task-list.html
@@ -54,14 +54,14 @@
 				this.$.challengeModal.toggle();
 			},
 			getTasks: function () {
-				get(this.$.getTasksAjax, '/tasks');
+				util.get(this.$.getTasksAjax, '/tasks');
 			},
 			onResponse: function (res) {
 				this.tasks = res.detail.response;
 				this.selectedTasks = [];
 			},
-			onError: function (error, res) {
-				handleError(error);
+			onError: function (error) {
+				util.error(error);
 			}
 		});
 	</script>
