--- a/app/elements/challenge/challenge-detail.html
+++ b/app/elements/challenge/challenge-detail.html
@@ -1,77 +1,133 @@
 <link rel="import" href="/bower_components/paper-material/paper-material.html">
+<link rel="import" href="../task/task-card.html">
 
 <dom-module id="challenge-detail">
+	<style>
+		iron-icon {
+			position: absolute;
+			bottom: 3%;
+			right: 1%;
+			height: 30px;
+			width: 30px;
+			cursor: pointer;
+		}
+		.card h1 {
+			padding: 20px 0;
+		}
+		.card h4 {
+			padding: 20px 0;
+		}
+		.row .grid-element {
+			margin: 16px;
+			width: calc(50% - 64px);
+		}
+	</style>
 
-  <style>
+	<template>
+		<iron-ajax
+		  id="challengeDetailAjax"
+		  handle-as="json"
+		  on-response="onResponse"
+		  on-error="onError">
+		</iron-ajax>
 
-  </style>
+		<iron-ajax
+		  id="taskDetailAjax"
+		  handle-as="json"
+		  on-response="onTaskResponse"
+		  on-error="onError">
+		</iron-ajax>
 
-  <template>
-    <iron-ajax
-            id="challengeDetailAjax"
-            handle-as="json"
-            on-response="onResponse"
-            on-error="onError">
-    </iron-ajax>
+		<div class="vertical layout">
+			<div class="row horizontal layout">
+				<paper-material class="card grid-element" elevation="1">
+					<h1>{{challenge.Name}}</h1>
+					<dl class="dl-horizontal">
+						<dt>Duration</dt>
+						<dd>{{duration}}</dd>
+						<dt>Description</dt>
+						<dd>{{challenge.Description}}</dd>
+						<dt>Instructions</dt>
+						<dd>{{challenge.Instructions}}</dd>
+					</dl>
+				</paper-material>
 
-    <iron-ajax
-            id="taskDetailAjax"
-            handle-as="json"
-            on-response="onTaskResponse"
-            on-error="onError">
-    </iron-ajax>
+				<paper-material class="card grid-element">
+					<h1> Skills chart</h1>
+				</paper-material>
+			</div>
 
-    <paper-material elevation="1">
-      <h1>{{challenge.Name}}</h1>
-      <h4>{{challenge.Description}}</h4>
-      <h4>{{challenge.Instructions}}</h4>
-      <h4>Total coders: <span>{{challenge.TotalCoders}}</span></h4>
-      <h4 class="link" on-click="viewResult">View results</h4>
-    </paper-material>
-
-    <template is="dom-repeat" items="{{tasks}}" as="task">
-      <paper-material>
-        <h4>{{task.Name}}</h4>
-        <p>Description:  <span>{{task.Description}}</span></p>
-        <p>Instructions: <span>{{task.Instructions}}</span></p>
-        <p>Time limit:   <span>{{task.Duration}}</span></p>
-      </paper-material>
-    </template>
-  </template>
-  <script>
-    Polymer({
-      is: 'challenge-detail',
-      properties: {
-        challenge: Object,
-        tasks: Array,
-        challengeKey: {
-          type: String,
-          notify: true
-        }
-
-      },
-      observers: [
-        'afterPropertiesSet(challengeKey)'
-      ],
-      afterPropertiesSet: function(){
-        util.get(this.$.challengeDetailAjax, '/challenges/' + this.challengeKey);
-      },
-      onResponse: function(res){
-        this.challenge = res.detail.response;
-        this.tasks = [];
-        for (var i = 0; i < this.challenge.Tasks.length; i++){
-          util.get(this.$.taskDetailAjax, '/tasks/' + this.challenge.Tasks[i]);
-        }
-      },
-      onTaskResponse: function(res){
-        this.push('tasks', res.detail.response);
-      },
-      viewResult: function(){
-        page.redirect('/coders/challenge/' + this.challenge.Key);
-      },
-      onError: function(error){
-        util.error(error);
-      }
-    });
-  </script>
+			<div class="row horizontal layout">
+				<paper-material	class="card grid-element">
+					<h4>Leaderboard</h4>
+					<table>
+						<tr>
+							<th>#</th>
+							<th>Name</th>
+						</tr>
+						<template is="dom-repeat" items="{{coders}}" as="coder">
+							<tr>
+								<td>{{computeIndex(index)}}</td>
+								<td>{{coder.Name}}</td>
+							</tr>
+						</template>
+					</table>
+				</paper-material>
+				<div class="grid-element horizontal layout wrap">
+					<template is="dom-repeat" items="{{tasks}}">
+						<task-card task="{{item}}" no-select></task-card>
+					</template>
+				</div>
+			</div>
+		</div>
+	</template>
+	<script>
+		Polymer({
+			is: 'challenge-detail',
+			properties: {
+				challenge: Object,
+				tasks: {
+					type: Array,
+					notify: true
+				},
+				challengeKey: {
+					type: String,
+					notify: true,
+					observer: 'keyChanged'
+				},
+				coders: {
+					type: Array,
+					value: [{'Name': 'Paul'}, {'Name': 'Lorenz'}, {'Name': 'Victor'}, {'Name': 'Sergiu'}],
+					notify: true
+				},
+				duration: {
+					type: String,
+					computed: 'computeDuration(challenge)'
+				}
+			},
+			computeDuration: function(challenge){
+				return util.computeDuration(challenge.Duration);
+			},
+			computeIndex: function(index){
+				return index + 1;
+			},
+			keyChanged: function () {
+				this.showTasks = false;
+				util.get(this.$.challengeDetailAjax, '/challenges/' + this.challengeKey);
+			},
+			onResponse: function (res) {
+				this.challenge = res.detail.response;
+				this.tasks = [];
+				for (var i = 0; i < this.challenge.Tasks.length; i++) {
+					util.get(this.$.taskDetailAjax, '/tasks/' + this.challenge.Tasks[i]);
+				}
+			},
+			onTaskResponse: function (res) {
+				this.push('tasks', res.detail.response);
+			},
+			onError: function (error) {
+				util.error(error);
+			}
+		});
+	</script>
 </dom-module>
