--- a/app/elements/challenge/challenge-modal.html
+++ b/app/elements/challenge/challenge-modal.html
@@ -17,7 +17,7 @@
 			<h2>These are the challenges tou selected: </h2>
 
 			<template is="dom-repeat" items="{{selectedTasks}}" as="selectedTask">
-				<div><span>{{index}}</span> <span>{{selectedTask.Name}}</span></div>
+				<div><span>{{_computeIndex(index)}}</span> <span>{{selectedTask.Name}}</span></div>
 			</template>
 
 			<form is="iron-form" id="form">
@@ -47,9 +47,10 @@
 				Description: String,
 				Name: String,
 				Instructions: String,
-				Duration: String
+				Duration: Number
 			},
 			toggle: function () {
+				this._computeDuration();
 				this.$.dialog.toggle();
 			},
 			saveChallenge: function () {
@@ -69,6 +70,16 @@
 			onChallengeResponse: function (res) {
 				this.fire('challengeCreated');
 				page.redirect('/challenges/' + res.detail.response.Key);
+			},
+			_computeDuration: function(){
+				var duration = 0;
+				for (var i = 0; i < this.selectedTasks.length; i++){
+					duration += this.selectedTasks[i].Duration;
+				}
+				this.Duration = duration / 6 / 1e10;
+			},
+			_computeIndex: function(index){
+				return index + 1;
 			}
 		});
 	</script>
