Import elements exactly when they are needed

--- a/app/elements/candidates/candidate-list.html
+++ b/app/elements/candidates/candidate-list.html
@@ -1,3 +1,6 @@
+<link rel="import" href="candidate-card.html">
+<link rel="import" href="/bower_components/iron-ajax/iron-ajax.html">
+
 <dom-module id="candidate-list">
 	<style>
 		:host {
