--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -1,96 +1,22 @@
-<!--
-@license
-Copyright (c) 2015 The Polymer Project Authors. All rights reserved.
-This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt
-The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
-The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt
-Code distributed by Google as part of the polymer project is also
-subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
--->
-
-<!-- Iron elements -->
-<link rel="import" href="/bower_components/iron-ajax/iron-ajax.html">
-<link rel="import" href="/bower_components/iron-icons/av-icons.html">
-<link rel="import" href="/bower_components/iron-icons/iron-icons.html">
-<link rel="import" href="/bower_components/iron-image/iron-image.html">
-<link rel="import" href="/bower_components/iron-flex-layout/classes/iron-flex-layout.html">
-<link rel="import" href="/bower_components/iron-form/iron-form.html">
-<link rel="import" href="/bower_components/iron-pages/iron-pages.html">
-<link rel="import" href="/bower_components/iron-selector/iron-selector.html">
-
-<!-- Neon elements -->
-<link rel="import" href="/bower_components/neon-animation/neon-animation.html">
-<link rel="import" href="/bower_components/neon-animation/neon-animated-pages.html">
-
-<!-- Paper elements -->
-<link rel="import" href="/bower_components/paper-button/paper-button.html">
-<link rel="import" href="/bower_components/paper-dialog/paper-dialog.html">
-<link rel="import" href="/bower_components/paper-drawer-panel/paper-drawer-panel.html">
-<link rel="import" href="/bower_components/paper-fab/paper-fab.html">
-<link rel="import" href="/bower_components/paper-header-panel/paper-header-panel.html">
-<link rel="import" href="/bower_components/paper-icon-button/paper-icon-button.html">
-<link rel="import" href="/bower_components/paper-input/all-imports.html">
-<link rel="import" href="/bower_components/paper-item/paper-item.html">
-<link rel="import" href="/bower_components/paper-material/paper-material.html">
-<link rel="import" href="/bower_components/paper-menu/paper-menu.html">
-<link rel="import" href="/bower_components/paper-menu-button/paper-menu-button.html">
-<link rel="import" href="/bower_components/paper-styles/paper-styles-classes.html">
-<link rel="import" href="/bower_components/paper-tabs/paper-tab.html">
-<link rel="import" href="/bower_components/paper-tabs/paper-tabs.html">
-<link rel="import" href="/bower_components/paper-toast/paper-toast.html">
-<link rel="import" href="/bower_components/paper-toolbar/paper-toolbar.html">
-
-<!-- Platinum elements -->
-<link rel="import" href="/bower_components/platinum-sw/platinum-sw-cache.html">
-<link rel="import" href="/bower_components/platinum-sw/platinum-sw-register.html">
-
-<!-- Add your elements here -->
-
-<link rel="import" href="candidates/candidate-card.html">
-<link rel="import" href="candidates/candidate-page.html">
-<link rel="import" href="candidates/candidate-list.html">
-
-<link rel="import" href="challenge/challenge-detail.html">
-<link rel="import" href="challenge/challenge-list.html">
-<link rel="import" href="challenge/challenge-card.html">
-<link rel="import" href="challenge/challenge-modal.html">
-
+<!-- TODO(victorbalan, flowlo, pbochis): Load navbar only when not on login page -->
+<!-- Navbar elements -->
 <link rel="import" href="nav-bar.html">
 
-<link rel="import" href="submission/challenge-display.html">
-<link rel="import" href="submission/challenge-finished.html">
-<link rel="import" href="submission/challenge-page.html">
-<link rel="import" href="submission/countdown-timer.html">
-<link rel="import" href="submission/sequential/sequential-challenge.html">
-<link rel="import" href="submission/tasks/general-code-task.html">
-<link rel="import" href="submission/tasks/task-display.html">
-<link rel="import" href="submission/tasks/task-timeout.html">
-<link rel="import" href="submission/tasks/simple-code/simple-code-task.html">
-<link rel="import" href="submission/tasks/javaut/javaut-task.html">
-<link rel="import" href="submission/tasks/output-match/output-match-task.html">
+<link rel="import" href="/bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="/bower_components/iron-pages/iron-pages.html">
 
-<link rel="import" href="editor-console/code-editor.html">
-<link rel="import" href="editor-console/language-selector.html">
-<link rel="import" href="editor-console/general-console.html">
-<link rel="import" href="editor-console/simple/simple-console.html">
-<link rel="import" href="editor-console/javaut/javaut-console.html">
-<link rel="import" href="editor-console/output-test/output-test-console.html">
+<link rel="import" href="/bower_components/paper-header-panel/paper-header-panel.html">
+<link rel="import" href="/bower_components/paper-icon-button/paper-icon-button.html">
+<link rel="import" href="/bower_components/paper-menu/paper-menu.html">
+<link rel="import" href="/bower_components/paper-menu-button/paper-menu-button.html">
+<link rel="import" href="/bower_components/paper-toolbar/paper-toolbar.html">
 
-<link rel="import" href="login-page-email/login-page-email.html">
-<link rel="import" href="login-page-password/login-page-password.html">
-<link rel="import" href="login-page-u2f/login-page-u2f.html">
-<link rel="import" href="login-page-final/login-page-final.html">
-<link rel="import" href="login-wizard/login-wizard.html">
 
-<link rel="import" href="statistics/statistics.html">
-<link rel="import" href="skill/task-skill.html">
-<link rel="import" href="skill/skill-list.html">
+<!-- General -->
+<link rel="import" href="/bower_components/iron-ajax/iron-ajax.html">
 
-<link rel="import" href="task/task-card.html">
-<link rel="import" href="task/task-list.html">
-
-<!--error pages-->
+<!-- Error pages-->
 <link rel="import" href="error/error-page.html">
 
-<!-- Configure your routes here -->
+<!-- Routing -->
 <link rel="import" href="routing.html">
