--- a/app/elements/nav-bar.html
+++ b/app/elements/nav-bar.html
@@ -1,3 +1,7 @@
+<link rel="import" href="/bower_components/paper-fab/paper-fab.html">
+<link rel="import" href="/bower_components/paper-tabs/paper-tab.html">
+<link rel="import" href="/bower_components/paper-tabs/paper-tabs.html">
+
 <dom-module id="nav-bar">
 	<style>
 		paper-fab {
