--- a/app/elements/submission/tasks/simple-code-task.html
+++ b/app/elements/submission/tasks/simple-code-task.html
@@ -1,3 +1,6 @@
+<link rel="import" href="general-code-task.html">
+<link rel="import" href="/elements/code-editor/consoles/simple-console.html">
+
 <dom-module id="simple-code-task">
 	<style>
 		:host{
