--- a/app/elements/task/task-list.html
+++ b/app/elements/task/task-list.html
@@ -1,3 +1,7 @@
+<link rel="import" href="task-card.html">
+<link rel="import" href="/elements/challenge/challenge-modal.html">
+<link rel="import" href="/bower_components/iron-ajax/iron-ajax.html">
+
 <dom-module id="task-list">
 	<style>
 		.margined {
