--- a/app/elements/challenge/challenge-modal.html
+++ b/app/elements/challenge/challenge-modal.html
@@ -1,3 +1,9 @@
+<link rel="import" href="/bower_components/iron-form/iron-form.html">
+<link rel="import" href="/bower_components/paper-input/all-imports.html">
+<link rel="import" href="/bower_components/paper-input/paper-input.html">
+<link rel="import" href="/bower_components/paper-button/paper-button.html">
+<link rel="import" href="/bower_components/paper-dialog/paper-dialog.html">
+
 <dom-module id="challenge-modal">
 	<template>
 		<iron-ajax
