--- a/app/elements/code-editor/consoles/simple-console.html
+++ b/app/elements/code-editor/consoles/simple-console.html
@@ -1,3 +1,7 @@
+<link rel="import" href="/bower_components/iron-autogrow-textarea/iron-autogrow-textarea.html">
+<link rel="import" href="/bower_components/iron-icons/av-icons.html">
+<link rel="import" href="general-console.html">
+
 <dom-module id="simple-console">
 	<style>
 		:host{
