--- a/app/elements/login-page-email/login-page-email.html
+++ b/app/elements/login-page-email/login-page-email.html
@@ -1,3 +1,9 @@
+<link rel="import" href="/bower_components/iron-icon/iron-icon.html">
+<link rel="import" href="/bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="/bower_components/paper-button/paper-button.html">
+<link rel="import" href="/bower_components/paper-input/all-imports.html">
+<link rel="import" href="/bower_components/paper-material/paper-material.html">
+
 <dom-module id="login-page-email">
 	<style type="text/css">
 :host {
