--- a/app/elements/login-page-final/login-page-final.html
+++ b/app/elements/login-page-final/login-page-final.html
@@ -1,3 +1,8 @@
+<link rel="import" href="/bower_components/iron-icon/iron-icon.html">
+<link rel="import" href="/bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="/bower_components/paper-material/paper-material.html">
+
+
 <dom-module id="login-page-final">
 	<style type="text/css">
 :host {
