--- a/app/elements/login-page-u2f/login-page-u2f.html
+++ b/app/elements/login-page-u2f/login-page-u2f.html
@@ -1,3 +1,9 @@
+<link rel="import" href="/bower_components/iron-icon/iron-icon.html">
+<link rel="import" href="/bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="/bower_components/paper-button/paper-button.html">
+<link rel="import" href="/bower_components/paper-icon-button/paper-icon-button.html">
+<link rel="import" href="/bower_components/paper-material/paper-material.html">
+
 <dom-module id="login-page-u2f">
 	<style type="text/css">
 :host {
