--- a/app/elements/login-wizard/login-wizard.html
+++ b/app/elements/login-wizard/login-wizard.html
@@ -1,3 +1,11 @@
+<link rel="import" href="/bower_components/iron-ajax/iron-ajax.html">
+<link rel="import" href="/bower_components/neon-animation/neon-animation.html">
+<link rel="import" href="/bower_components/neon-animation/neon-animated-pages.html">
+<link rel="import" href="/elements/login-page-email/login-page-email.html">
+<link rel="import" href="/elements/login-page-password/login-page-password.html">
+<link rel="import" href="/elements/login-page-u2f/login-page-u2f.html">
+<link rel="import" href="/elements/login-page-final/login-page-final.html">
+
 <dom-module id="login-wizard">
 	<template>
 		<neon-animated-pages id="pages" class="flex" selected="[[selected]]" entry-animation="[[entryAnimation]]" exit-animation="[[exitAnimation]]">
