--- a/app/elements/submission/tasks/general-code-task.html
+++ b/app/elements/submission/tasks/general-code-task.html
@@ -1,3 +1,10 @@
+<link rel="import" href="/bower_components/iron-icons/av-icons.html">
+<link rel="import" href="/bower_components/paper-button/paper-button.html">
+<link rel="import" href="/bower_components/paper-material/paper-material.html">
+<link rel="import" href="/elements/code-editor/code-editor.html">
+<link rel="import" href="/elements/code-editor/language-selector.html">
+<link rel="import" href="task-display.html">
+
 <dom-module id="code-task">
 	<style>
 		:host{
